--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ hadoop/prehadoop/\.vagrant/machines/hadoop-master/virtualbox/
 
 
 hadoop/prehadoop/\.vagrant/machines/hadoop-slave1/virtualbox/
+
+hadoop/hadoop/mapreduce/\.idea/libraries/
