fixed run script

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ hadoop/hadoop/mapreduce/\.idea/libraries/
 hadoop/hadoop/mapreduce/\.idea/artifacts/
 
 hadoop/hadoop/mapreduce/output/
+
+hadoop/hadoop/mapreduce/\.idea/
